--- a/ajp_lab/week_11/WebContent/createStudent.html
+++ b/ajp_lab/week_11/WebContent/createStudent.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <center>
-<form action="createStudent" method="get">
+<form action="/week_11/createStudent" method="get">
 SRN <input type="text" id="srn"/>
 <br/>
 Name <input type="text" id="name"/>
